# docpipe

./: .gitignore  .gitleaks.toml  Cargo.toml  DEVELOP.md  Dockerfile  LICENSE  README.md  README.zh.md  RELEASE.md  openapi.yaml
.github/workflows/: ci.yml
clients/python/: pyproject.toml
clients/python/attune_docs/: __init__.py  client.py  models.py
clients/python/docpipe/: __init__.py  client.py  models.py
clients/python/tests/: test_client.py
clients/typescript/: package-lock.json  package.json  tsconfig.json
clients/typescript/src/: client.ts  types.ts
clients/typescript/tests/: client.test.ts
crates/attune-docs-core/: Cargo.toml
crates/attune-docs-core/src/: error.rs  facade.rs  lib.rs  types.rs
crates/attune-docs-core/src/annotator/: mod.rs
crates/attune-docs-core/src/chunker/: mod.rs  semantic.rs
crates/attune-docs-core/src/embedder/: ollama.rs
crates/attune-docs-core/src/ocr/: kreuzberg.rs  mineru.rs  mod.rs  models.rs
crates/attune-docs-core/src/parser/: auto.rs  docx.rs  html.rs  mod.rs  pdf.rs  pdf_render.rs
crates/attune-docs-core/src/store/: sqlite.rs
crates/attune-docs-core/tests/: integration_parse.rs
crates/attune-docs-core/tests/fixtures/: bank_page1_expected.json
crates/attune-docs-server/: Cargo.toml
crates/attune-docs-server/src/: config.rs  error.rs  main.rs  state.rs
crates/attune-docs-server/src/routes/: annotate.rs  chunk.rs  embed.rs  health.rs  parse.rs  search.rs
crates/docpipe-core/: Cargo.toml
crates/docpipe-core/examples/: pii_ner_eval.rs
crates/docpipe-core/src/: error.rs  facade.rs  lib.rs  types.rs
crates/docpipe-core/src/annotator/: locator.rs
crates/docpipe-core/src/chunker/: mod.rs  semantic.rs
crates/docpipe-core/src/embedder/: mod.rs  ollama.rs
crates/docpipe-core/src/ocr/: kreuzberg.rs  mineru.rs  mod.rs  models.rs
crates/docpipe-core/src/parser/: auto.rs  docx.rs  html.rs  pdf.rs  pdf_render.rs
crates/docpipe-core/src/pii/: llm.rs  mod.rs  patterns.rs  redact.rs
crates/docpipe-core/src/store/: mod.rs  sqlite.rs
crates/docpipe-core/tests/: integration_parse.rs
crates/docpipe-core/tests/fixtures/: pii_eval_corpus.jsonl
crates/docpipe-server/: Cargo.toml
crates/docpipe-server/src/: config.rs  error.rs  jobs.rs  main.rs  state.rs
crates/docpipe-server/src/routes/: annotate.rs  chunk.rs  documents.rs  embed.rs  ingest.rs  jobs.rs  mod.rs  parse.rs  pii.rs  search.rs
docker/full/: docker-compose.yml
docker/lite/: docker-compose.yml
docs/superpowers/plans/: 2026-06-24-docpipe-v1.1-api.md  2026-06-25-docpipe-pii-detection.md
docs/superpowers/specs/: 2026-06-24-docpipe-v1.1-api.md  2026-06-25-docpipe-pii-detection.md
examples/: http-ingest-search.sh  python_review_flow.py  typescript-review-flow.ts
scripts/: pii-eval.sh
