[workspace]
resolver = "2"
members = ["crates/attune-docs-core", "crates/attune-docs-server"]

[workspace.package]
edition = "2021"
rust-version = "1.85"
version = "0.1.0"
authors = ["qiurui144"]
license = "Apache-2.0"

[workspace.dependencies]
kreuzberg-paddle-ocr = "4.9"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "tls-rustls"] }
pdf-extract = "0.8"
pdfium-render = "0.9"
docx-rs = "0.4"
scraper = "0.21"
axum = { version = "0.8", features = ["json", "multipart"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.10-alpha.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
tempfile = "3"
image = "0.25"
sha2 = "0.10"

[profile.release]
opt-level = 3

# sqlite-vec 0.1.10-alpha.4 包含对缺失的 sqlite-vec-diskann.c 的 #include，
# 该 alpha 版本打包时遗漏了 diskann 实现文件。通过 patch 指向本地副本（已将
# SQLITE_VEC_ENABLE_DISKANN 改为 0 以跳过缺失文件），功能上完全等价。
[patch.crates-io]
sqlite-vec = { path = "vendor/sqlite-vec" }
