[project]
name = "attune-docs-client"
version = "0.1.0"
description = "Python client for attune-docs SDK"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "pydantic>=2"]

[project.optional-dependencies]
test = ["pytest", "respx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["attune_docs"]
