[project]
name = "docpipe-client"
version = "1.0.0"
description = "Python client for docpipe SDK"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "pydantic>=2"]
license = {text = "Apache-2.0"}
authors = [{name = "qiurui144"}]

[project.urls]
Repository = "https://github.com/qiurui144/docpipe"

[project.optional-dependencies]
test = ["pytest", "respx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docpipe"]
