[package]
name = "attune-docs-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
kreuzberg-paddle-ocr = { workspace = true }
image = { workspace = true }
ort = { workspace = true }
pdf-extract = { workspace = true }
pdfium-render = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
