[package]
name = "attune-docs-server"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
attune-docs-core = { path = "../attune-docs-core" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.5"

[dev-dependencies]
reqwest = { workspace = true }
async-trait = { workspace = true }
