[package]
name = "docpipe-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
regex = "1"
once_cell = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
kreuzberg-paddle-ocr = { workspace = true }
image = { workspace = true }
ort = { workspace = true }
pdf-extract = { workspace = true }
pdfium-render = { workspace = true }
docx-rs = { workspace = true }
scraper = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }

[dev-dependencies]
mockito = "1"
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
