[package]
name = "docpipe-server"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
docpipe-core = { path = "../docpipe-core" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
reqwest = { workspace = true }
async-trait = { workspace = true }
